<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="20sp"
            android:layout_weight="1"
            app:srcCompat="@drawable/images" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/authorization"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_1_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="5sp"
            android:background="@drawable/fields"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/et_2_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="5sp"
            android:background="@drawable/fields"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_1_main"
            android:onClick="logInButtonClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/button"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>